bk_ida/gccida/c2/new_alias_set
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/new_alias_set/src/alias.c:1058:10: error: use of undeclared identifier 'new_alias_set_last_alias_set'
return ++new_alias_set_last_alias_set; 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/new_alias_set/src/obj/alias.o] Error 1
